--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "homepage": "http://yashikabhardwaj.github.io/Portfoliobhardwaj",
+  
   "name": "portfoiopro",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run  server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run   build --prefix client",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run   build --prefix client"
+    
   },
   "author": "",
   "license": "ISC",
